# nadir

./: .gitignore  .readthedocs.yaml  CITATION.cff  CODE_OF_CONDUCT.md  LICENCE  LITERATURE.md  README.md  ROADMAP.md  literature.md  pyproject.toml  requirements_test.txt  roadmap.md  setup.cfg  test-requirements.txt  test.ipynb
.github/: FUNDING.yml
dawnofeve/base/: base_optimizer.py  config.py
dawnofeve/optim/: __init__.py  optimizer.py  sgd.py
dawnofeve/optimizer/: __init__.py  sgd.py
docs/: requirements.txt
docs/source/: conf.py  index.rst
examples/: example.ipynb  ranger.ipynb
minima/optim/: __init__.py  adam.py  optimizer.py  sgd.py
nadir/: BaseOptimiser.py  __init__.py  adam.py  sgd.py
src/nadir/: BaseOptimiser.py  NAG.py  SGD.py  __init__.py  adabelief.py  adadelta.py  adagrad.py  adam.py  adamax.py  adamw.py  amsgrad.py  base.py  lion.py  momentum.py  nadam.py  radam.py  rmsprop.py  sgd.py
src/nadir.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: mnist-requirements.txt  mnist.py  random_seed_generator.py  random_seeds.txt
