[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nadir"
version = "0.0.1.dev1"
authors = [
  { name="Bhavnick Minhas", email="bhavnicksm@gmail.com" },
]
maintainers = [
  { name = "Bhavnick Minhas", email="bhavnicksm@gmail.com"},
]
description = "Nadir is a library of bleeding-edge DL optimisers built for speed and functionality in PyTorch for researchers"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
license = { text = "Apache 2.0"}
dependencies = [
    "torch>=1.13.1",
    "torchvision>=0.14.1",
    "tqdm",
    "wandb"
]

[project.urls]
"Homepage" = "https://github.com/Dawn-Of-Eve/nadir"
"Bug Tracker" = "https://github.com/Dawn-Of-Eve/nadir/issues"


[tools.setuptools]
packages = ["nadir"]
package-dir = {"" = "src"}